--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,44 +4,23 @@ on:
     branches:
       - main
       - dev
+  pull_request:
+    types:
+      - edited
+      - opened
+  workflow_dispatch:
 env:
-  CACHE_KEY: node-deps
-  MONGODB_DB_NAME: gha-demo
+  version_number: ${{ vars.MAJOR_VERSION }}.${{ vars.MINOR_VERSION }}.${{ github.run_number}}
+  registry_url: crs63dev100.azurecr.io
 jobs:
-  test:
-    environment: testing
-    runs-on: ubuntu-latest
-    env:
-      MONGODB_CONNECTION_PROTOCOL: mongodb+srv
-      MONGODB_CLUSTER_ADDRESS: cluster0.ntrwp.mongodb.net
-      MONGODB_USERNAME: ${{ secrets.MONGODB_USERNAME }}
-      MONGODB_PASSWORD: ${{ secrets.MONGODB_PASSWORD }}
-      PORT: 8080
-    steps:
-      - name: Get Code
-        uses: actions/checkout@v3
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        run: npm ci
-      - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:$PORT # requires MongoDB Atlas to accept requests from anywhere!
-      - name: Run tests
-        run: npm test
-      - name: Output information
-        run: |
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
-  deploy:
-    needs: test
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Output information
-        env:
-          PORT: 3000
-        run: |        
-          echo "MONGODB_DB_NAME: $MONGODB_DB_NAME"
-          echo "MONGODB_USERNAME: $MONGODB_USERNAME"
-          echo "${{ env.PORT }}"
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build --file Dockerfile --tag 'latest' --tag ${{ env.version_number }} .
+    - name: Login to Azure Registry
+      run: docker login --username  --password $registry_url
+    - name: Pull the Docker image
+      run: docker pull --all-tags  
+      
