aded --password-stdin

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $registry_url/s63-back:latest --tag $registry_url/s63-back:${{ env.version_number }} 
     - name: Login to Azure Registry
-      run: docker login --username ${{ vars.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }} $registry_url
+      run: docker login --username ${{ vars.ACR_USERNAME }} --password-stdin ${{ secrets.ACR_PASSWORD }} $registry_url
     - name: Pull the Docker image
       run: |
         docker image ls
