--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $registry_url/s63-back:latest --tag $registry_url/s63-back:${{ env.version_number }} 
+      run: docker build . --file Dockerfile --tag $registry_url/s63-back:latest --tag s63-back:${{ env.version_number }} 
     - name: Login to Azure Registry
-      run: docker login --username ${{ vars.ACR_USERNAME }} --password-stdin ${{ secrets.ACR_PASSWORD }} $registry_url
+      run: echo ${{ secrets.ACR_PASSWORD }} | docker login --username ${{ vars.ACR_USERNAME }} --password  $registry_url
     - name: Pull the Docker image
       run: |
         docker image ls
