--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $registry_url/s63-back:latest --tag s63-back:${{ env.version_number }} 
+      run: |
+        docker build . --file Dockerfile --tag $registry_url/s63-back:latest --tag s63-back:${{ env.version_number }} 
+    
     - name: Login to Azure Registry
-      run: echo ${{ secrets.ACR_PASSWORD }} | docker login --username ${{ vars.ACR_USERNAME }} --password-stdin  $registry_url
+      run: |
+        echo ${{ secrets.ACR_PASSWORD }} | docker login --username ${{ vars.ACR_USERNAME }} --password-stdin  $registry_url
+    
     - name: Pull the Docker image
       run: |
-        docker image ls
         docker image push --all-tags $registry_url/s63-back
+    - name: Logout
+      run: |
+        docker logout
       
