--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,8 @@ jobs:
         key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
       run: npm ci
-    - name: Lint code
-      run: npm run lint
+    # - name: Lint code
+    #   run: npm run lint
     - name: Test code
       run: npm run test
   deploy:
