--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,59 +1,75 @@
-name: Deployment (Container)
+name: Website Deployment
 on:
   push:
     branches:
       - main
-      - dev
-  pull_request:
-    types:
-      - edited
-      - opened
-  workflow_dispatch:
-env:
-  CACHE_KEY: deps-node-modules
-  NODE_VER: 18.16.1
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Get Code
-      uses: actions/checkout@v3
-    - name: Use a Node.js version  ${{env.NODE_VER }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{env.NODE_VER }}
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
-    - name: Install dependencies
-      run: npm ci
-    # - name: Lint code
-    #   run: npm run lint
-    - name: Test code
-      run: npm run test
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Lint code
+        run: npm run lint
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Test code
+        run: npm run test
+      - name: Upload test report
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: test.json
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        run: npm ci
+      - name: Build website
+        id: build-website
+        run: npm run build
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist-files
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Get Code
-      uses: actions/checkout@v3
-    - name: Use a Node.js version  ${{env.NODE_VER }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{env.NODE_VER }}  
-    
-    - name: Cache dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.npm
-        key: ${{ env.CACHE_KEY }}-${{ hashFiles('**/package-lock.json') }}
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    - name: Build website
-      run: npm run build
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
+      - name: Deploy
+        run: echo "Deploying..."
